# HDmap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  check_memory.sh  cpplint.sh  heap_mem.txt  stack_mem.txt  test.sh
include/: lanelet2_parser.hpp  map_server.hpp  rtree.hpp  types.hpp
scripts/: benchmark_parser.sh  download_benchmark_data.sh
src/: lanelet2_parser.cpp  main.cpp  map_server.cpp  rtree.cpp  types.cpp
tests/: test_map_server.cpp  test_rtree.cpp  test_types.cpp
